Fri Jun 13 10:58:52 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* libxslt/libxslt.h libexslt/libexslt.h libexslt/exslt.h: patch
	  from Roumen Petrov fixing include path when compiling with MinGW

Thu Jun 12 11:23:23 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltconfig.h.in libxslt/xsltlocale.h configure.in
	  config.h.in win32/configure.js: patch from Nick Wellnhofer and
	  Roumen Petrov to fix some portability problems on the previous
	  xsl:sort locale patch

Tue Jun  3 18:26:26 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* configure.in libxslt/extra.c libxslt/Makefile.am libxslt/preproc.c
	  libxslt/xsltInternals.h libxslt/xsltlocale.c libxslt/xsltlocale.h
	  libxslt/xsltutils.c win32/Makefile.mingw win32/Makefile.msvc: patch
	  from Nick Wellnhofer adding xsl:sort lang support using the locale
	  support from the C library.

Tue Jun  3 18:14:55 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.h: as Ralf Junker pointed out
	  xsltExtFunctionLookup was defined but never implemented, removing it

Tue May 13 17:51:05 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* configure.in doc/*: release of 1.1.24
	* python/generator.py: syntactic cleanup (Martin)

Tue May 13 16:32:22 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* libxslt/xslt.c libxslt/extensions.c libxslt/extensions.h:
	  fix the processing of top level elements of stylesheets which
	  are not in the XSLT namespace and are not an extension either
	  should fix #529223
	* tests/docs/Makefile.am tests/docs/bug-167.xml
	  tests/general/Makefile.am tests/general/bug-167.*: add the
	  test to the regression suite

Fri May  9 14:30:35 CEST 2008 Daniel Veillard <daniel@veillard.com>

	* libxslt/documents.c libxslt/keys.c libxslt/xsltInternals.h
	  libxslt/transform.c libxslt/pattern.c: fix the key initialization
	  problem introduced when tracking Josef Urban problem from 22 Dec
	  2007, this should also handle the problem of recursive keys