@@ -244,7 +244,17 @@ xsltCompileAttr(xsltStylesheetPtr style, xmlAttrPtr attr) {
 	    }
 
 	    cur++;
-	    while ((*cur != 0) && (*cur != '}')) cur++;
+	    while ((*cur != 0) && (*cur != '}')) {
+		/* Need to check for literal (bug539741) */
+		if ((*cur == '\'') || (*cur == '"')) {
+		    char delim = *(cur++);
+		    while ((*cur != 0) && (*cur != delim)) 
+			cur++;
+		    if (*cur != 0)
+			cur++;	/* skip the ending delimiter */
+		} else
+		    cur++;
+	    }
 	    if (*cur == 0) {
 	        xsltTransformError(NULL, style, attr->parent,
 		     "Attribute '%s': The AVT has an unmatched '{'.\n",
