@@ -166,6 +166,7 @@ EXTRA_DIST =	\
 	bug-165.xml \
 	bug-166.xml \
 	bug-167.xml \
+	bug-168.xml \
 	character.xml \
 	array.xml \
 	items.xml
