@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0" xmlns="http://www.w3.org/1999/xhtml">
+
+<xsl:template match="*">
+<A a="{concat('{',namespace-uri(),'}',local-name())}"/>
+<B b='{concat("{",namespace-uri(),"}",local-name())}'/>
+</xsl:template>
+
+</xsl:stylesheet>
