@@ -1,0 +1,2 @@
+<?xml version="1.0"?>
+<A xmlns="http://www.w3.org/1999/xhtml" a="{http://www.w3.org/1999/XSL/Transform}stylesheet"/><B xmlns="http://www.w3.org/1999/xhtml" b="{http://www.w3.org/1999/XSL/Transform}stylesheet"/>
